# toolbox

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.github/workflows/: validate-boilerplates.yml
boilerplates/: README.md
boilerplates/hackathon/: .env.example  .gitignore  README.md
boilerplates/mobile-flutter/: .editorconfig  .env.example  .gitignore  README.md  analysis_options.yaml  gitleaks.toml  pubspec.yaml
boilerplates/mobile-flutter/.github/workflows/: ci.yml
boilerplates/mobile-flutter/integration_test/: app_test.dart
boilerplates/mobile-flutter/lib/: main.dart
boilerplates/mobile-flutter/lib/core/: analytics.dart  config.dart  error_tracking.dart  feature_flags.dart
boilerplates/mobile-flutter/lib/providers/: analytics_provider.dart  feature_flag_provider.dart
boilerplates/mobile-flutter/lib/screens/: home_screen.dart  settings_screen.dart
boilerplates/mobile-flutter/lib/widgets/: consent_dialog.dart
boilerplates/mobile-flutter/test/: analytics_test.dart
boilerplates/mobile-swift/: .env.example  .gitignore  .swiftlint.yml  Package.swift  README.md  gitleaks.toml
boilerplates/mobile-swift/.github/: dependabot.yml
boilerplates/mobile-swift/.github/workflows/: ci.yml
boilerplates/mobile-swift/Sources/: ToolboxApp.swift
boilerplates/mobile-swift/Sources/Core/: AnalyticsManager.swift  Config.swift  ErrorTracker.swift  FeatureFlagManager.swift
boilerplates/mobile-swift/Sources/Providers/: ConsentView.swift  HomeView.swift  SettingsView.swift
boilerplates/mobile-swift/Tests/: AnalyticsManagerTests.swift
boilerplates/webapp-fastapi/: .env.example  .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  cliff.toml  docker-compose.dev.yml  docker-compose.prod.yml  gitleaks.toml  pyproject.toml
boilerplates/webapp-fastapi/.github/workflows/: ci.yml
boilerplates/webapp-fastapi/app/: main.py  models.py
boilerplates/webapp-fastapi/app/api/: items.py  routes.py
boilerplates/webapp-fastapi/app/core/: analytics.py  background.py  config.py  database.py  error_tracking.py  feature_flags.py  logging.py
boilerplates/webapp-fastapi/app/middleware/: analytics.py  auth.py  request_id.py
boilerplates/webapp-fastapi/migrations/: env.py
boilerplates/webapp-fastapi/scripts/: load-test.py
boilerplates/webapp-fastapi/tests/: conftest.py  test_health.py
boilerplates/webapp-nextjs/: .env.example  .gitignore  .lintstagedrc.json  README.md  docker-compose.dev.yml  docker-compose.prod.yml  next.config.mjs  package.json  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json
boilerplates/webapp-nextjs/.github/workflows/: ci.yml
boilerplates/webapp-nextjs/scripts/: analyze.sh
boilerplates/webapp-nextjs/src/app/: home-content.tsx  layout.tsx  page.tsx
boilerplates/webapp-nextjs/src/components/: CookieConsent.tsx
boilerplates/webapp-nextjs/src/lib/: analytics-server.ts  analytics.ts  feature-flags-server.ts  feature-flags.ts
boilerplates/webapp-nextjs/src/providers/: AnalyticsProvider.tsx  FeatureFlagProvider.tsx
boilerplates/webapp-nextjs/tests/: smoke.spec.ts
boilerplates/website-astro/: .env.example  .gitignore  .lintstagedrc.json  README.md  astro.config.mjs  docker-compose.dev.yml  docker-compose.prod.yml  gitleaks.toml  lighthouserc.js  package.json  playwright.config.ts
boilerplates/website-astro/.github/workflows/: ci.yml
boilerplates/website-astro/src/components/: Analytics.astro  CookieConsent.astro
boilerplates/website-astro/src/layouts/: BaseLayout.astro
boilerplates/website-astro/src/lib/: analytics.ts  error-tracking.ts  feature-flags.ts
boilerplates/website-astro/tests/: smoke.spec.ts
docs/: 00-overview.md  01-prerequisites.md  02-coolify-setup.md  03-infisical-setup.md  04-deploy-stack.md  05-verification.md  06-operations.md  07-troubleshooting.md  08-cookie-consent.md  09-extensions.md  10-project-workflow.md  11-feedback-loops.md  12-environments.md  13-voice-interface.md  14-tools-overview.md  15-extended-tools.md
scripts/: coolify-deploy.sh  generate-secrets.sh  smoke-test.sh
stacks/: coolify.env.example
stacks/analytics/: .env.example  docker-compose.yml
stacks/core-data/: .env.example  docker-compose.yml
stacks/error-tracking/: .env.example  docker-compose.yml
stacks/feature-flags/: .env.example  docker-compose.yml
stacks/monitoring/: docker-compose.yml
stacks/networks/: docker-compose.yml
stacks/observability/: .env.example  docker-compose.yml
stacks/search-ai/: .env.example  docker-compose.yml
stacks/secrets/: .env.example  docker-compose.yml
tools/claude-usage/: .env.example  pyproject.toml
tools/claude-usage/claude_usage/: __init__.py  api_client.py  auth.py  cli.py  config.py  db.py  display.py  log_writer.py  models.py  monitor.py
tools/claude-usage/claude_usage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tools/claude-usage/logs/: usage_2026-03-08.jsonl  usage_2026-03-13.jsonl
tools/code-review/: pyproject.toml
tools/code-review/code_review/: api_client.py  auth.py  cli.py  config.py  display.py  fixer.py  git_ops.py  hook.py  knowledge.py  models.py  prompts.py  reviewer.py
tools/coolify-auto-deploy/: Dockerfile  pyproject.toml
tools/coolify-auto-deploy/coolify_auto_deploy/: __init__.py  cli.py  config.py  coolify.py  database.py  deploy_log.py  glitchtip.py  infisical.py  main.py  models.py  notifications.py  umami.py  uptime_kuma.py
tools/coolify-auto-deploy/scripts/: setup-org-webhook.sh  validate-config.py
tools/coolify-auto-deploy/tests/: test_coolify_api.py  test_unit.py
tools/pr-comments/: README.md  pyproject.toml
tools/pr-comments/pr_comments/: cli.py  formatter.py  github_client.py  models.py
tools/pr-comments/pr_comments.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/voice-feedback/: .env.example  Dockerfile  README.md  pyproject.toml
tools/voice-feedback/app/: analyzer.py  api.py  cli.py  config.py  models.py  posthog_sync.py  transcriber.py
tools/voice-feedback/tests/: test_analyzer.py
(+10 files in other folders)
