[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "coolify-auto-deploy"
version = "0.1.0"
description = "Auto-deploy projects to Coolify from GitHub webhooks"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "fastapi>=0.115",
    "psycopg[binary]>=3.1",
]

[project.scripts]
coolify-auto-deploy = "coolify_auto_deploy.cli:cli"
